# ClaudeGeoAI

./: .gitignore  CLAUDE.md  README.md  config.py  index.html  package-lock.json  package.json  render.yaml  requirements.txt  vite.config.ts
api/: .flaskenv  App.py  claude_agent.py  file_agent.py  mcp_tools.py
mcp-server-arcgis/: .env.example  pyproject.toml  requirements.txt
mcp-server-arcgis/src/mcp_arcgis/: __init__.py  geoai_server.py
prompts/: query_rules.md  system.md
prompts/skills/: portfolio_report.md
scripts/: start-server.js
src/: App.tsx  index.css
src/components/: AnalyticsPage.tsx  ChatBot.tsx  Footer.tsx  Header.tsx  HelpPage.tsx  LanguageSwitcher.tsx  LoginPage.tsx  Map.tsx  ResultsTable.tsx  SettingsPage.tsx  Sidebar.tsx
src/i18n/: index.ts
src/i18n/locales/: ar.json  en.json  fr.json  nl.json
src/services/: api.ts  gisfunctions.ts
src/types/: index.ts
